vbnc/vbnc/tests/Errors/Sub.vb
Module SubTest
Public Sub 
        foo()
    End Sub
End Module
